# depoStockApi

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: deps.py  main.py
api/routes/: health.py  stock.py
app/: main.py
app/api/v1/: endpoints.py
app/core/: cache.py  config.py  exceptions.py  wsaa.py
app/schemas/: stock.py
app/services/: afip_client.py
src/depo_stock/: __init__.py  client.py  exceptions.py  models.py  wsaa.py
tests/: test_models.py
